--- a/XGArqmobUI/Classes/ArqmobErrorView/AmErrorView.xib
+++ b/XGArqmobUI/Classes/ArqmobErrorView/AmErrorView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -28,17 +28,17 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iMl-6a-tnE">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="453.5"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="01e-e8-Kld">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="262"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="170.5"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Dj-GP-yZJ">
-                                    <rect key="frame" x="30" y="40" width="354" height="222"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="7Dj-GP-yZJ">
+                                    <rect key="frame" x="30" y="40" width="260" height="130.5"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -50,19 +50,19 @@
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pwF-I7-cul">
-                            <rect key="frame" x="20" y="302" width="374" height="21"/>
+                            <rect key="frame" x="20" y="210.5" width="280" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" name="textColorErrorView"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PKH-xq-E0f">
-                            <rect key="frame" x="20" y="347" width="374" height="20.5"/>
+                            <rect key="frame" x="20" y="255.5" width="280" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" name="textColorErrorView"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kDn-Py-7HZ" customClass="AmDefaultGrayButton" customModule="XGArqmobUI" customModuleProvider="target">
-                            <rect key="frame" x="135" y="399.5" width="144" height="44"/>
+                            <rect key="frame" x="88" y="308" width="144" height="44"/>
                             <color key="backgroundColor" name="backgroundButtonErrorView"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="idy-Iu-Tf9"/>
@@ -82,7 +82,6 @@
                         <constraint firstAttribute="trailing" secondItem="pwF-I7-cul" secondAttribute="trailing" constant="20" id="4KP-Uo-Ah3"/>
                         <constraint firstItem="kDn-Py-7HZ" firstAttribute="top" secondItem="PKH-xq-E0f" secondAttribute="bottom" constant="32" id="8pa-VK-hgT"/>
                         <constraint firstItem="pwF-I7-cul" firstAttribute="top" secondItem="01e-e8-Kld" secondAttribute="bottom" constant="40" id="AmX-uS-DLy"/>
-                        <constraint firstItem="01e-e8-Kld" firstAttribute="height" secondItem="iMl-6a-tnE" secondAttribute="height" multiplier="0.3" id="BTd-ro-N7Z"/>
                         <constraint firstItem="PKH-xq-E0f" firstAttribute="leading" secondItem="iMl-6a-tnE" secondAttribute="leading" constant="20" id="GNf-Os-iCA"/>
                         <constraint firstItem="kDn-Py-7HZ" firstAttribute="centerX" secondItem="iMl-6a-tnE" secondAttribute="centerX" id="ICL-wE-a6T"/>
                         <constraint firstItem="pwF-I7-cul" firstAttribute="leading" secondItem="iMl-6a-tnE" secondAttribute="leading" constant="20" id="JP3-a9-fcq"/>
@@ -90,21 +89,21 @@
                         <constraint firstItem="01e-e8-Kld" firstAttribute="leading" secondItem="iMl-6a-tnE" secondAttribute="leading" id="UeL-1r-yxa"/>
                         <constraint firstAttribute="trailing" secondItem="PKH-xq-E0f" secondAttribute="trailing" constant="20" id="aXA-oh-2UI"/>
                         <constraint firstItem="01e-e8-Kld" firstAttribute="top" secondItem="iMl-6a-tnE" secondAttribute="top" id="kDx-r2-I1c"/>
-                        <constraint firstAttribute="bottom" secondItem="kDn-Py-7HZ" secondAttribute="bottom" constant="10" id="niZ-6i-u9z"/>
+                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="kDn-Py-7HZ" secondAttribute="bottom" constant="10" id="niZ-6i-u9z"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lSB-8g-zbp">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="293"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="293"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="98F-oc-eaE">
-                            <rect key="frame" x="132" y="50" width="150" height="150"/>
+                            <rect key="frame" x="85" y="50" width="150" height="150"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="150" id="ER0-9C-LuX"/>
                                 <constraint firstAttribute="height" constant="150" id="cVb-Wr-xe3"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wjn-g5-hYM">
-                            <rect key="frame" x="20" y="216" width="374" height="21"/>
+                            <rect key="frame" x="20" y="216" width="280" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -124,7 +123,9 @@
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
                 <constraint firstItem="iMl-6a-tnE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="IJV-vS-epC"/>
+                <constraint firstItem="01e-e8-Kld" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.3" id="NDU-VD-Xl5"/>
                 <constraint firstItem="iMl-6a-tnE" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="bBA-qR-lMU"/>
+                <constraint firstItem="iMl-6a-tnE" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="eQ9-Sg-7DH"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="lSB-8g-zbp" secondAttribute="trailing" id="hN2-1V-9Dd"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="iMl-6a-tnE" secondAttribute="trailing" id="iMC-cK-eih"/>
                 <constraint firstItem="lSB-8g-zbp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="iPg-Dh-m5C"/>
