--- a/XGArqmobUI/Classes/ArqmobAboutUs/AmAboutUs.storyboard
+++ b/XGArqmobUI/Classes/ArqmobAboutUs/AmAboutUs.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Vhr-Ed-H82">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Vhr-Ed-H82">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -27,7 +28,7 @@
         <!--Am About Us MainVC-->
         <scene sceneID="0ok-gI-UiW">
             <objects>
-                <viewController storyboardIdentifier="AmAboutUsMainVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="UgT-4d-fKL" customClass="AmAboutUsMainVC" customModule="XGArqmobUi" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AmAboutUsMainVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="UgT-4d-fKL" customClass="AmAboutUsMainVC" customModule="XGArqmobUI" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3WU-55-OfJ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -39,6 +40,7 @@
                                     <segment title="Second"/>
                                     <segment title=""/>
                                 </segments>
+                                <color key="tintColor" name="primaryColor"/>
                                 <connections>
                                     <action selector="segmentedChangeValue:" destination="UgT-4d-fKL" eventType="valueChanged" id="rtZ-27-ebj"/>
                                 </connections>
@@ -75,7 +77,7 @@
         <!--Am About Us Page Controller-->
         <scene sceneID="tKo-jz-asN">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="56B-9f-UGE" customClass="AmAboutUsPageController" customModule="XGArqmobUi" customModuleProvider="target" sceneMemberID="viewController"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="56B-9f-UGE" customClass="AmAboutUsPageController" customModule="XGArqmobUI" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IDo-r0-AAk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="994" y="-544"/>
@@ -83,7 +85,7 @@
         <!--Am Child About UsVC-->
         <scene sceneID="rYe-qn-kMR">
             <objects>
-                <viewController storyboardIdentifier="AmChildAboutUsVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="pCN-LA-Ejp" customClass="AmChildAboutUsVC" customModule="XGArqmobUi" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AmChildAboutUsVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="pCN-LA-Ejp" customClass="AmChildAboutUsVC" customModule="XGArqmobUI" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cRp-xb-GUa">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -190,7 +192,7 @@
         <!--Am Child ContactVC-->
         <scene sceneID="TfY-4L-LPz">
             <objects>
-                <viewController storyboardIdentifier="AmChildContactVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="1Db-Yx-zM4" customClass="AmChildContactVC" customModule="XGArqmobUi" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AmChildContactVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="1Db-Yx-zM4" customClass="AmChildContactVC" customModule="XGArqmobUI" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3cE-9h-fEh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -219,7 +221,7 @@
         <!--Am Child VersionVC-->
         <scene sceneID="5YB-Id-uCr">
             <objects>
-                <viewController storyboardIdentifier="AmChildVersionVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="12z-kK-0AM" customClass="AmChildVersionVC" customModule="XGArqmobUi" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AmChildVersionVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="12z-kK-0AM" customClass="AmChildVersionVC" customModule="XGArqmobUI" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="31j-B6-fxY">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -251,6 +253,9 @@
         <image name="amtega_aboutus" width="166" height="62"/>
         <image name="galicia_aboutus" width="166" height="55"/>
         <image name="xunta_aboutus" width="166" height="52"/>
+        <namedColor name="primaryColor">
+            <color red="0.0" green="0.62400001287460327" blue="0.88999998569488525" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
         <namedColor name="primaryTextColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
